curiositymachine/static/less/pages/base.less
/* ... */
////========================
//// home pge

.home-hero {
  margin: 0 -(@grid-side-gutters);
  margin-top: -120px;
  margin-bottom: 15px;
  height: 550px;
  padding: 120px 0 0 65px;
  background: url('../images/collage3.png') 440px 0px no-repeat, -moz-linear-gradient(top,  rgba(214,227,223,0) 0%, rgba(214,227,223,0) 25%, rgba(214,227,223,1) 100%); /* FF3.6+ */
  background: url('../images/collage3.png') 440px 0px no-repeat, -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(214,227,223,0)), color-stop(25%,rgba(214,227,223,0)), color-stop(100%,rgba(214,227,223,1))); /* Chrome,Safari4+ */
  background: url('../images/collage3.png') 440px 0px no-repeat, -webkit-linear-gradient(top,  rgba(214,227,223,0) 0%,rgba(214,227,223,0) 25%,rgba(214,227,223,1) 100%); /* Chrome10+,Safari5.1+ */
  background: url('../images/collage3.png') 440px 0px no-repeat, -o-linear-gradient(top,  rgba(214,227,223,0) 0%,rgba(214,227,223,0) 25%,rgba(214,227,223,1) 100%); /* Opera 11.10+ */
  background: url('../images/collage3.png') 440px 0px no-repeat, -ms-linear-gradient(top,  rgba(214,227,223,0) 0%,rgba(214,227,223,0) 25%,rgba(214,227,223,1) 100%); /* IE10+ */
  background: url('../images/collage3.png') 440px 0px no-repeat, linear-gradient(to bottom,  rgba(214,227,223,0) 0%,rgba(214,227,223,0) 25%,rgba(214,227,223,1) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00d6e3df', endColorstr='#d6e3df',GradientType=0 ); /* IE6-9 */
  h1 {
    font-size: 70px;
    font-weight: 300;
    font-family: "Raleway Dots", "Raleway";
    line-height: 90px;
  }
  h2 {
    font-size: 22px;
    line-height: 1.2;
    margin: 0;
    &:nth-child(3) {color: @blue;}
    &:nth-child(4) {color: @green;}
  }
  .login-buttons {
    padding: 0;
    margin-top: 30px;
    li {
      list-style-type: none;
      float: left;
      margin-right: 20px;
      .btn, .btn-link {
        font-size: 20px;
      }
    }
  }
}


//////==========================
/////  challenges list page

.challenges-list {
  margin: 0;
  padding-left: 0;
  .clearfix();
  li {
    list-style-type: none;
  }
  .owl-item {
    width: 450px;
    padding: 3px 10px 0 10px;
  }
  .image-container {
    img {
      width: 100%;
    }
  }
}

.theme-wrapper {
  padding: 0 (@grid-gutter-width / 2);
}

.theme-carousel {
  position: relative;
  padding-left: 0;
  .owl-item {
    padding: 5px;
    li {
      list-style-type: none;
      border: 2px solid transparent;
      padding: 2px;
      border-radius: @border-radius-base + 2;
      &.active {
        border: 2px solid @orange;
      }
      a {
        background: @green; 
        display: block;
        height: 100px;
        border-radius: @border-radius-base;
        color: #fff;
        position: relative;
        .theme-name {
          position: absolute;
          left: 10px;
          bottom: 5px;
        }
        .theme-icon {
          position: absolute;
          top: 3px;
          right: 10px;
          font-size: 70px;
        }
        box-shadow: 2px 2px 2px rgba(0,0,0,.2);
      }
    }
  }
}

.challenge-browser {
  margin-top: 40px;
}


////============================
///    challenge details

.challenge-details-hero {
  position: relative;
  margin: 0 -(@grid-side-gutters);
  min-height: 400px;
  img {
    width: 100%;
  }
  .details {
    color: #fff;
    text-shadow: 2px 1px 2px rgba(0, 0, 0, .25);
    position: absolute;
    bottom: 40px;
    left: 30px;
    font-size: 36px;
    margin-right: 200px;
  }
}

.challenge-details {
  .btn-primary {
    position: relative;
    float: right;
    margin: -70px 0px 0 0;
    z-index: 2;
  }
  .challenge-content {
    margin-top: 100px;
  }
}

#guide-modal {
  .tab-pane {
    height: 340px;
    overflow: scroll;
  }
}

.main-content > h1 {
  margin: -10px 200px 30px 0px;
}

//============================
//    Challenges page

.challenge-header {
  padding: 10px 0 40px 0;
 p {
  font-size: @font-size-large;
  color: @orange;
  } 
}

.action-list {
  padding: 0;
  clear: both;
  li {
    float: left;
    width: 33%;
    padding: 0 5px;
    list-style-type: none;
    text-align: center;
    .btn {
      background: @green;
      color: #fff;
      font-size: 30px;
      width: 75px;
      height: 75px;
      line-height: 1;
      padding: 15px;
      .gray-light & {
        background: @gray-light;
      }
    }
  }
}

.challenge-content {
  margin-top: 120px;
  .start-link {
    width: 100%;
    padding: 20px 0;
    font-size: @font-size-large;
    font-weight: 600;
  }
}

.materials-list {
  .panel-heading {
    background: @blue;
    color: #fff;
  }
  ul, ol {
    padding-left: 19px;
  }
  margin-bottom: 35px;
}

.mentor-comment {
  float: left;
  color: @blue;
  font-weight: 600;
}

.panel-bubble.comment {
  margin-top: 5px;
  margin-right:125px;
  .panel-body {
    padding: 15px;
  }
}

.mentor-info.comment {
  float: right;
  width: 100px;
  img {
    width: 50px;
  }
}

//reflect
.reflect-box {
  textarea {
    display: block;
    background: lighten(@teal, 20%);
    width: 100%;
    color: @text-color;
  }
  .btn {
    .button-variant(#fff; @teal; @teal);
    &.btn-reflect {float: right; margin: 10px 0 20px 0;}
    margin-right: 10px;
  }
  label {display: none;}
  p {
    margin: 20px 0;
  }
  a { color: #fff;}
}

.reflect-question {
  .panel-bubble & h3 {
    text-align: left;
    margin-bottom: 0;
    font-weight: 600;
  }
  .refresh {
    margin-top: 5px;
   cursor: pointer;
   padding-right: 10px;
   position: relative;
   top: 3px;
   font-size: @font-size-small;
  }
}

#reflect-images {
  img {
    width: 100%;
  }
  .img-wrapper {
    margin-bottom: 15px;
  }
  .btn {
    font-size: 40px;
  }
}
/* ... */

